--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "lua auth",
     "luauth"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LuaSeal/LuaSeal-NPM"
+  },
   "author": "globe",
   "license": "MIT",
   "description": "LuaSeal API Wrapper"
